# multi_robot_bridge

./: .gitignore  README.md
multi_robot_relay/: package.xml  setup.cfg  setup.py
multi_robot_relay/config/: relay_config.yaml  robots_example.yaml
multi_robot_relay/launch/: central_registry.launch.py  multi_robot_system.launch.py  robot_relay.launch.py
multi_robot_relay/multi_robot_relay/: __init__.py  coordinate_transformer_node.py  robot_registry_node.py  tf_relay_node.py  topic_relay_node.py
multi_robot_relay/test/: example_scheduler.py  monitor.sh  quick_test.py  test_relay.py
